--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,11 @@ include = [
 [badges]
 maintenance = { status = "passively-maintained" }
 
+[features]
+ordered-map = ["dep:indexmap"]
+
 [dependencies]
+indexmap = { version = "2.4", optional = true }
 
 [dev-dependencies]
 walkdir = "2"
